Fix blocker bug 322701 -- don't reenter StartLayout.  pending r=ben, sr=dbaron.